# nomino_desktop

./: .gitignore  CHANGELOG.md  DISTRIBUTION-README.txt  GITHUB-RELEASE-INSTRUCTIONS.md  GITHUB-RELEASE-v1.1.0.md  LICENSE  README.md  RELEASE-NOTES-v1.1.0.md  RELEASE_NOTES_v1.0.0.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
program_10/: README.md  change-date.spec  change_name.spec  main.py
program_10/.github/: copilot-instructions.md
scripts/: generate-icons.js
src/: app.css  app.html
src-tauri/: Cargo.toml  pdf_date_replacer.py  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/lib/components/: Chart.svelte  Header.svelte  Sidebar.svelte  StatsCard.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/copy/: +page.svelte
src/routes/excel-rename/: +page.svelte
src/routes/file-sorter/: +page.svelte
src/routes/files/: +page.svelte
src/routes/folders/: +page.svelte
src/routes/pdf/: +page.svelte
src/routes/pdf-date/: +page.svelte
src/routes/pdf-merge/: +page.svelte
src/routes/settings/: +page.svelte
