[package]
name = "nomino"
version = "1.1.0"
description = "Cross-platform desktop application for bulk folder renaming, file copying, and PDF date replacement with Azerbaijani alphabet support"
authors = ["ClauseBreaker <https://github.com/ClauseBreaker>"]
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/ClauseBreaker/nomino"
default-run = "nomino"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = ["codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-close", "window-start-dragging", "window-unmaximize", "window-minimize", "window-hide", "window-show", "window-unminimize", "window-maximize", "fs-all", "dialog-all", "path-all", "shell-open"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
calamine = "0.22"
image = "0.24"
pdf-writer = "0.11"
rayon = "1.8"
lopdf = "0.32"
regex = "1.10"
chrono = "0.4"
pdf = "0.8"
pdf-extract = "0.7"
printpdf = "0.7"
pdfium-render = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_System_SystemServices", "Win32_UI_Shell"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ] 
 